# Arqanore

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build-tools  build-tools.ps1  build.sh  generate-shader-sources  generate.ps1  generate.sh  init  install.sh  pack  publish  publish.ps1
Source/: Seanuts.sln
Source/Seanuts.Framework/: Draw.cs  Enums.cs  Exceptions.cs  Extensions.cs  GameWindow.cs  Seanuts.Framework.csproj
Source/Seanuts.Http/: AsyncHttpServer.cs  Enums.cs  Exceptions.cs  HttpClient.cs  HttpHeaders.cs  HttpHelper.cs  HttpRequestBody.cs  Seanuts.Http.csproj
Source/Seanuts.OpenGL/: GL10.cs  GL11.cs  GL12.cs  GL13.cs  GL14.cs  GL15.cs  GL20.cs  GL21.cs  GL30.cs  GL31.cs  GL32.cs  GL33.cs  GL40.cs  GL41.cs  GL42.cs  GL43.cs  GL44.cs  GL45.cs  GLEX.cs  GLFW.cs  GLU.cs  Seanuts.OpenGL.csproj  WGL.cs
Source/Seanuts.Pathfinding/: MinHeapNode.cs  PathFinder.Debug.cs  PathFinder.cs  Seanuts.Pathfinding.csproj
Source/Seanuts.Sockets/: AsyncSocketClient.cs  AsyncSocketServer.cs  Extensions.cs  Seanuts.Sockets.csproj  SocketAccept.cs  SocketMessage.cs
Source/Seanuts.WebSockets/: AsyncWebSocketClient.cs  AsyncWebSocketServer.cs  Enums.cs  Exceptions.cs  Extensions.cs  Seanuts.WebSockets.csproj  WebSocketMessage.cs
assets/: icon.xcf
assets/models/: axis.arqm  axis.blend  axis.glb  cube.arqm  cube.blend  cube.glb  wobble.arqm  wobble.blend
assets/shaders/: sprity_f.glsl
docs/: Doxyfile
docs/html/: annotated.html  classes.html  dir_12b99e58c12283f25eeb04c7f11ef3b0.html  dir_12b99e58c12283f25eeb04c7f11ef3b0_dep.map  dir_12b99e58c12283f25eeb04c7f11ef3b0_dep.md5  dir_43dfccdf9bf3bc457b2cd5e77a402766.html  dir_43dfccdf9bf3bc457b2cd5e77a402766_dep.map  dir_43dfccdf9bf3bc457b2cd5e77a402766_dep.md5  dir_47247aaf66fbfb8785624d92bc833c04.html  dir_47247aaf66fbfb8785624d92bc833c04_dep.map  dir_47247aaf66fbfb8785624d92bc833c04_dep.md5  dir_5139132be0f61a6d1d7f88d894fd326b.html  dir_5139132be0f61a6d1d7f88d894fd326b_dep.map  dir_5139132be0f61a6d1d7f88d894fd326b_dep.md5  dir_54c29f099a44a6d61381829e8f012f98.html  dir_54c29f099a44a6d61381829e8f012f98_dep.map  dir_54c29f099a44a6d61381829e8f012f98_dep.md5  dir_66efb0128652afda31d341f6350bf2c8.html  dir_66efb0128652afda31d341f6350bf2c8_dep.map  dir_66efb0128652afda31d341f6350bf2c8_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_783c6cd06b13c29edd588c6ce69e3329.html  dir_783c6cd06b13c29edd588c6ce69e3329_dep.map  dir_783c6cd06b13c29edd588c6ce69e3329_dep.md5  dir_7ad488f2750f5d6039e1e744797e58e4.html  dir_7ad488f2750f5d6039e1e744797e58e4_dep.map  dir_7ad488f2750f5d6039e1e744797e58e4_dep.md5  dir_9296af2eda63a30f42099bfa940c3e68.html  dir_9296af2eda63a30f42099bfa940c3e68_dep.map  dir_9296af2eda63a30f42099bfa940c3e68_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  dir_e931c1a3f0014e624d0645a271726ad2.html  dir_e931c1a3f0014e624d0645a271726ad2_dep.map  dir_e931c1a3f0014e624d0645a271726ad2_dep.md5  files.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  (+43 more)
docs/latex/: annotated.tex  files.tex  hierarchy.tex  refman.tex
examples/BasicGame/: Program.cs
examples/BasicWindow/: Program.cs
examples/Platformer/: Block.cs  Item.cs  Platformer.csproj  Player.cs  Program.cs
examples/Pong/: Player1.cs  Player2.cs  Pong.csproj  Program.cs
examples/basic_game/: Player.cs  Program.cs
examples/basic_window/: Program.cs  example1.csproj
examples/platformer/: Program.cs
include/arqanore/: arqanore.h  audio.h  bone.h  camera.h  color.h  exceptions.h  font.h  image.h  joystick.h  keyboard.h  light.h  material.h  mathhelper.h  matrix3.h  matrix4.h  mesh.h  model.h  modelloader.h  modelparser.h  mouse.h  polygon.h  quaternion.h  renderer.h  scene.h  shader.h  shaders.h  shadersources.h  sound.h  sprite.h  texture.h  utils.h  vector2.h  vector3.h  vector4.h  window.h
shaders/: font_f.glsl  font_v.glsl  model_f.glsl  model_v.glsl  polygon_f.glsl  sprite_f.glsl  sprite_v.glsl
src/: Arqanore.csproj  Arqanore.nuspec  Arqanore.sln  Draw.cs  Enums.cs  Exceptions.cs  Extensions.cs  Seanuts.csproj  Time.cs  Window.cs
src-examples/: Examples.sln
src-examples/BasicGame/: Player.cs  Program.cs
src-examples/BasicWindow/: BasicWindow.csproj  Program.cs
src-examples/Platformer/: Block.cs  Item.cs  Platformer.csproj  Player.cs  Program.cs
src-examples/Text/: Arial.snfnt  Program.cs
src-seanuts/: Device.cs  Draw.cs  Enums.cs  Exceptions.cs  Extensions.cs  SNDevice.cs  SNDraw.cs  SNTime.cs  SNWindow.cs  Window.cs
src-seanuts/Framework/: SNDraw.cs  SNGameWindow.cs  SNTime.cs
src-seanuts/Graphics/: Font.cs  FontData.cs  Image.cs  SNColor.cs  SNFont.cs  SNFontData.cs  SNImage.cs  SNShader.cs  SNShaders.cs  Shader.cs
src-seanuts/Http/: SNAsyncHttpClient.cs  SNAsyncHttpServer.cs  SNHttpClient.cs  SNHttpClientRequest.cs  SNHttpConnectionInfo.cs  SNHttpRequestBody.cs  SNHttpServerRequest.cs  SNHttpServerResponse.cs
src-seanuts/Input/: Keyboard.cs  Mouse.cs  SNKeyboard.cs  SNMouse.cs
src-seanuts/Math/: Rectangle.cs  SNMath.cs  SNRectangle.cs  SNVector2.cs
src-seanuts/Pathfinding/: SNMinHeap.cs  SNMovementPatterns.cs
src-seanuts/Sockets/: SNAsyncSocketServer.cs
src-seanuts/UI/: Element.cs  SNElement.cs
src-seanuts/WebSockets/: SNAsyncWebSocketClient.cs  SNAsyncWebSocketServer.cs  SNClient.cs  SNWebSocketMessage.cs
src-tools/fonteditor/: Editor.cs  FontEditor.csproj  Program.cs
src-tools/fontgenerator/: FontGenerator.csproj  Program.cs
src-tools/fontviewer/: FontViewer.csproj  Liberation Sans.seafnt  Program.cs
src/Arqanore/: Arqanore.csproj  Device.cs  Draw.cs  Enums.cs  Exceptions.cs  Extensions.cs  Window.cs
src/Arqanore.Examples.Example1/: Arqanore.Examples.Example1.csproj  Program.cs
src/Arqanore.Examples.Pong/: Arqanore.Examples.Pong.csproj  Ball.cs  Game.cs  Player.cs  Program.cs
src/Arqanore.FontGenerator/: Arqanore.FontGenerator.csproj  Exceptions.cs  Program.cs  default.arqfnt
src/Arqanore.TexGenerator/: Arqanore.TexGenerator.csproj  Exceptions.cs  Program.cs
src/Framework/: Device.cs  Draw.cs  GameWindow.cs  SNDevice.cs  Time.cs
(+413 files in other folders)
